--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,14 @@
         android:id="@+id/dataListView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/btnStopService" />
+        android:layout_below="@+id/switch1" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GPS"
+        android:id="@+id/switch1"
+        android:layout_below="@+id/btnStopService"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
